# 2048AIC

./: .gitignore  CMakeLists.txt  Makefile  board.c  board.h  main.c
